fixing the footer alignement

--- a/style.scss
+++ b/style.scss
@@ -206,7 +206,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    align-items: flex-sart;
+    align-items: flex-start;
 
     .informations {
       display: flex;
